Fix annotations not showing, context menu appearing in weird places

--- a/app/styles/components/text-annotation.styl
+++ b/app/styles/components/text-annotation.styl
@@ -5,7 +5,7 @@
         fill: blue
         opacity: 0.4
         transform: scale3d(1, 1, 1)
-        transition: all 0.2s linear
+        transition: transform 0.2s linear
 
     > .text.-dragging
         cursor: move
